# fathom-mcp

./: .gitignore  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yaml  release.yaml  test-formats.yml
docs/: cloud-sync-guide.md
specs/: phase-3-decision.md  phase-4-distribution.md
src/contextfs/search/: ugrep.py
src/file_knowledge_mcp/: config.py  prompts.py  server.py
src/file_knowledge_mcp/pdf/: __init__.py  parallel.py
src/file_knowledge_mcp/search/: cache.py  index.py  ugrep.py  watcher.py
src/file_knowledge_mcp/tools/: read.py
tests/: conftest.py  test_browse.py  test_cache.py  test_index.py  test_pdf_processor.py  test_prompts.py  test_read.py  test_resources.py  test_search.py  test_watcher.py
